<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/protocolpage5frag_relativelayout"
    android:background="@color/colorPrimary">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/drawable_circle_dark_blue"
        android:indeterminate="false"
        android:max="100"
        android:visibility="gone"
        android:progress="100"
        android:progressDrawable="@drawable/drawable_circle_grey"
        android:rotation="-90"
        android:secondaryProgress="100"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="33sp"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:fontFamily="sans-serif"
        android:id="@+id/P1"
        android:gravity="left"
        android:justificationMode="inter_word"
        android:text="@string/protocol5"
        android:textSize="16sp"
        android:textStyle="normal|bold|italic"
        android:textColor="@color/white_color"/>

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="99dp"
        android:text="10Sec"
        android:textAlignment="center"
        android:textSize="30sp"
        android:visibility="gone"/>


    <RelativeLayout
        android:id="@+id/relBtn"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/button_start_pause"
            android:layout_width="130dp"
            android:layout_height="31dp"
            android:layout_marginStart="15dp"
            android:background="@color/white_color"
            android:text="@string/Start"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            android:textColor="#FDA50F" />

        <Button
            android:id="@+id/button_reset"
            android:layout_width="129dp"
            android:layout_height="31dp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="21dp"
            android:background="@color/white_color"
            android:text="@string/Cancel"
            android:textSize="16sp"
            android:textStyle="normal|bold"
            android:textColor="#FDA50F" />

    </RelativeLayout>



</RelativeLayout>